@@ -2,17 +2,15 @@
 Hash: SHA512
 
 AUX github2-0.4.0-test_build_path.patch 466 RMD160 b67996360784a1fb528fee5fbcc103c9d33818b2 SHA1 9329e026da67524ed6092c8c8b49a65eaab388ba SHA256 47e4d089a86ada9334c792299d93cac09fa74bbe078c3fb1178ccc6bf7424a2f
-DIST github2-0.5.0.tar.gz 118719 RMD160 34e86974bcaba8089242f9932cee585a0b7b76dc SHA1 b37b74f3ce4b60df27512d4eb9ec3b9de9dd5bb6 SHA256 a42900e76061bebdeb8bd4eac94b404c8ef124ee45fddff823c21f9447e07e70
 DIST github2-0.5.1.tar.gz 120238 RMD160 7f240ab59af32e8031be2615fa2177450e5c4790 SHA1 c95dac0b1d1cf963452b8914d6ba7e481d2b778a SHA256 a34bc9b4ba50760b018614e0c6569469305280417c61ae376a570f1b35b3ed8b
-EBUILD github2-0.5.0.ebuild 1269 RMD160 97f686481d2bdb97f45cda83875947aa93c1b44e SHA1 05455bb28a6999686cb8dfa5029714217568e5fb SHA256 c349c1394a20b78e701bcc42669274594f2e98991c9662527f64d5fb236aad6d
 EBUILD github2-0.5.1.ebuild 1240 RMD160 637f5a6d0c838658229928f7ffcbfd54a73a8792 SHA1 e4367b88f055061cc570bd7b0d41868444b63159 SHA256 c1e4e63607ce79830ef79df070c0b02cbf4032eccc73962c4b6df352fd96c344
-MISC ChangeLog 3336 RMD160 80f2d0923cffa0eaa2284fd160df202a56a77d71 SHA1 86ca67ea35389fcc50ad37c8d4e1d80621f5fe45 SHA256 bab615a7ade102d4d2243c3310ac9a676f2763fabb12094a944c42118386f81f
-MISC metadata.xml 806 RMD160 ebbe88cfd22fddc7c745da87dd2e674e1bbe613b SHA1 e82f8e17d6b4e7eda31f119a14a8103f1e449268 SHA256 44fd8f8c3cd796526261547df299689040cf98c1bcf96b236bab5479f5b0005e
+MISC ChangeLog 3436 RMD160 ac3123004a3b92bd7a5dab4201525dce98d1e08a SHA1 ffdf976132180c8b63455a65c7dd0d7f18b39029 SHA256 b2c544722249467a7d2099574d917ed7821b82836f49405edf8b174be0e8d897
+MISC metadata.xml 647 RMD160 09af4425feef0ab2ed752dbe7e7683ef28c0f458 SHA1 c39075966e63e621b01038f9350b43a3353b6458 SHA256 faee41216c00b37ac29520caf25609c35153809517187b810dbdd7ed05980295
 MISC watch 12 RMD160 93a2adec9e10f09240c494996f1b879ab1a61113 SHA1 d61fd79473fa9466604269b1d76a71d70ed24b7a SHA256 806ffafa2258c82b35917a67c5f7faff76604958adae5efb722ca9ef82ee2874
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.17 (GNU/Linux)
 
-iEYEAREKAAYFAk4sTFgACgkQzJrj3cAXR0lotgCgnX3JBqSwA9v71wH/ItxpleOp
-pPUAn0GSf+nape/0zg1gqNPbuUsj4Ehj
-=2iCb
+iEYEAREKAAYFAk5mMIQACgkQzJrj3cAXR0lZhwCfYgTUMRD3o/To7id5u4zs1Awc
+lFgAn2dD7MqA+BmKPK9q2TbAOn+eBYcu
+=L1AY
 -----END PGP SIGNATURE-----
