@@ -2,6 +2,9 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  06 Sep 2011; James Rowe <jnrowe@gmail.com> metadata.xml:
+  Removed unused USE=proxy description.
+
   24 Jul 2011; James Rowe <jnrowe@gmail.com> -github2-0.4.1.ebuild,
   github2-0.5.0.ebuild:
   Keyworded x86.
